--- a/index.html
+++ b/index.html
@@ -101,12 +101,11 @@
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6 col-12"  data-aos="flip-up" data-aos-offset="200">
                 <h1>What do you <span class="text-info">want to know?</span></h1>
-                <p class="p-2">I'm vijay misal from 2nd semester of 
+                <p class="p-2">I am vijay misal and I was from 2nd semester of 
                   diploma in computer technology. 
-                  Currently i'm learning c++ & front-end 
-                  online from youtube as a teacher...
+                  Currently i'm learning java and js  
                   I'll be mentioning my friends in this website for making it communitive 
-                  This website i've created with bootstrap 5 with some video references.
+                  This website i've created with bootstrap 5 with one video reference on youtube.
                   Thank you for visiting here.
                 </p>
                 <button type="button" class="btn btn-light mb-5">More About me</button>
@@ -131,7 +130,7 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        I developed many basic websites using just html 5 and css 3. We are only taught html basics in our 2nd semester in our college but <strong>who cares !</strong> I can code in javascript also for website! I accessed many of the online tutorials from <a href="www.youtube.com">YouTube</a> offcourse I also refered many websites to learn many things.
+                        learning new things!!
                       </div>
                     </div>
                   </div>
@@ -143,7 +142,7 @@
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <strong>Nothing rather than CODING & DESIGNING WEBSITES.</strong> Also I like to play BGMI not PUBG as it was not supporting my device, so I used to play PUBG Lite before government bans it. I also like to play PUBG KR which is korean version. Coming outdoors I only like to play CRICKET in free time and to chitchat with school friends only! Thank you for reading these stuff dude.  
+                          <strong> playing cricket and spending time with friends, having fun and little bit programming</strong>
                       </div>
                     </div>
                   </div>
@@ -168,9 +167,9 @@
       <div class="card-body">
         <i class="fa fa-code bg-Danger p-2 text-white rounded mb-2"></i>
         <h5 class="card-title">Web Development</h5>
-        <p class="card-text">As you can see this not Fullstack but as a Frontend developer I create web pages like this. If anyone is intrested then let me know! Submit the form below.
+          <p class="card-text"></p>
           <br>
-          
+          coming soon
         </p>
         <a href="#" class="btn btn-info">Access Now</a>
       </div>
@@ -182,7 +181,7 @@
       <div class="card-body ">
         <i class="fab fa-Android bg-white p-2 text-dark rounded mb-2"></i>
         <h5 class="card-title">App Development</h5>
-        <p class="card-text">Don't worry buddy. We'll unlock this feature soon as we are in 2<sup>nd</sup> semester, we are not taught how to develop android application yet!</p>
+        <p class="card-text">coming soon! hope so</p>
         <a href="#" class="btn btn-light">Access Now</a>
       </div>
     </div>
@@ -192,7 +191,7 @@
         <div class="card-body">
           <i class="fas fa-laptop-code bg-Danger p-2 text-white rounded mb-1"></i>
           <h5 class="card-title">Software Development</h5>
-          <p class="card-text">A little bit software development I can do with python and javascript only! But, yes i'm not sure that i'll 100% perform that.</p>
+          <p class="card-text">coming soon</p>
           <a href="#" class="btn btn-info">Access Now</a>
         </div>
       </div>
@@ -206,7 +205,7 @@
       <div class="card-body">
         <i class="fas fa-crop-alt bg-Danger p-2 text-white rounded mb-1"></i>
         <h5 class="card-title">Graphics Design</h5>
-        <p class="card-text">As a web developer everyone must have to know about graphics designing for sample of web pages. So yes I can also do that.</p>
+        <p class="card-text">coming soon</p>
         <a href="#" class="btn btn-info">Access Now</a>
       </div>
     </div>
@@ -217,7 +216,7 @@
       <div class="card-body">
         <i class="fa fa-users bg-white p-2 text-dark rounded mb-2"></i>
         <h5 class="card-title">Web App Development</h5>
-        <p class="card-text">Again this is totally unlocked feature of this website as we require knowledge of PHP for that which I don't have till now.</p>
+        <p class="card-text">coming soon.</p>
         <a href="#" class="btn btn-light">Access Now</a>
       </div>
     </div>
@@ -227,7 +226,7 @@
         <div class="card-body">
           <i class="fas fa-video bg-Danger p-2 text-white rounded mb-1"></i>
           <h5 class="card-title">Video Editing</h5>
-          <p class="card-text">It is a another skill i've but in the handsets not on pc as it is again low end. From my handset, but soon i'll be moving on pc stay tuned.</p>
+          <p class="card-text">highly recommended and available man</p>
           <a href="#" class="btn btn-info">Access Now</a>
         </div>
       </div>
