--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <strong>I am just 10<sup>th</sup> board pass out student.</strong> But, currently I am studying in 2nd semester of diploma in computer technology. I am intrested in developing websites with various frameworks. This website is developed by me using the bootstrap 5 version which is best framework everybody ever seen.
+                          <strong>10<sup>th</sup> passed and pursuing diploma in computer technology</strong>
                       </div>
                     </div>
                   </div>
